# SubmodularMinimization.jl

./: .gitignore  DETAILS.md  Project.toml  README.md  TEST_SUMMARY.md  build_python_library.jl  performance_analysis.jl  profile_standard.jl  submodular_minimization_python.py  test_caching.jl  test_python_wrapper.py  test_verbose.jl  verification_demo.jl
.github/workflows/: CI.yml
pysubmodular/: README.md  pyproject.toml
pysubmodular/examples/: basic_usage.py
pysubmodular/pysubmodular/: __init__.py  core.py  exceptions.py  functions.py  julia_bridge.py
pysubmodular/tests/: test_functions.py
src/: SubmodularMinimization.jl  algorithms.jl  caching.jl  core.jl  examples.jl  oracles.jl  python_interface.jl  utils.jl
test/: Project.toml  brute_force_submodularity_checker.jl  runtests.jl  test_algorithm_verification.jl  test_algorithms.jl  test_brute_force_enumeration.jl  test_brute_force_simple.jl  test_core.jl  test_correctness_comparison.jl  test_edge_cases.jl  test_examples.jl  test_extensive_randomized_correctness.jl  test_feature_selection_investigation.jl  test_feature_selection_submodularity.jl  test_is_minimiser.jl  test_is_submodular.jl  test_oracles.jl  test_verbose.jl
