[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysubmodular"
version = "0.1.0"
description = "Python wrapper for SubmodularMinimization.jl - High-performance submodular function minimization"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Edwin Wlock", email = "edwlock@example.com"}
]
keywords = ["optimization", "submodular", "convex", "julia", "wolfe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "julia>=0.6.1",
    "typing-extensions>=4.0.0; python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]
examples = [
    "matplotlib>=3.5.0",
    "networkx>=2.8.0",
    "scipy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/edwlock/SubmodularMinimization.jl"
Documentation = "https://github.com/edwlock/SubmodularMinimization.jl/blob/main/DETAILS.md"
Repository = "https://github.com/edwlock/SubmodularMinimization.jl"
"Bug Tracker" = "https://github.com/edwlock/SubmodularMinimization.jl/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pysubmodular*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-ra",
]